# channels-practice

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: requirements.txt
backend/backend/: asgi.py  settings.py  urls.py
backend/game/: consumers.py
backend/game/templates/: base.html  game.html  index.html
backend/static/css/: main.css
data/db/: postmaster.pid
data/db/base/13395/: 1247  1249  1259  16386  16392  16393  16395  16397  16401  16403  16405  16407  16411  16413  16421  16423  16431  16439  16441  16449  16455  16457  16464  16466  16479  16480  16481  16493  16494  16495  16507  16508  16509  16518  16519  16531  16532  16538  16547  16548  (+30 more)
data/db/global/: 1260  pg_control  pg_internal.init
data/db/pg_stat_tmp/: db_0.stat  db_13395.stat  global.stat
