[tool.poetry]
name = "circlechannel"
version = "0.1.0"
description = ""
authors = ["YiJuLai <lyle.yj.lai@mail.foxconn.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.1.4"
pip = "^21.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
